cria o rodapé do html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <span>Cor: Roxa</span>
               <span>Tamanho: M</span>
               <span>R$: 89,90</span>
-                <button>Adicionar ao Carrinho</button>
+              <button>Adicionar ao Carrinho</button>
             </div>
             <figure>
               <img
@@ -56,12 +56,45 @@
               <span>Cor: Roxa</span>
               <span>Tamanho: P</span>
               <span>R$: 100,00</span>
-                <button>Adicionar ao Carrinho</button>
+              <button>Adicionar ao Carrinho</button>
             </div>
           </li>
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <nav>
+        <h3>Institucional</h3>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#produtos">Produtos</a></li>
+          <li><a href="#perguntas-frequentes">Perguntas  Frequentes</a></li>
+          <li><a href="#fale-conosco">Fale Conosco</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <h3>Ajuda</h3>
+        <ul>
+          <li><a href="#trocas">Trocas</a></li>
+          <li><a href="#termos">Termos</a></li>
+          <li><a href="#politica">Política de Privacidade</a></li>
+          <li><a href="#padrao">Padrão de Qualidade</a></li>
+        </ul>
+      </nav>
+       <nav>
+        <h3>Endereço</h3>
+        <ul>
+          <li><a href="#">Rua Vale do Silicio</a></li>
+          <li>São Francisco, Califórnia</a></li>
+          <li>Estados Unidos da América</li>
+          <li><a href="#">(34) 11234-5678</a></li>
+          <li><a href="#">vendas@ecommercedd.com</a></li>
+        </ul>
+      </nav>
+      <div>
+        <p>@2024 - Todos os direitos reservados</p>
+      </div>
+    </footer>
   </body>
 </html>
