--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/reset.css">
 
     <title>E-commerce Master</title>
   </head>
@@ -35,7 +36,7 @@
             <figure>
               <img
                 src="./assets/images/camiseta_roxa.jpg"
-                alt="Camiseta Roxa"
+                alt="Camiseta Dev em Dobro"
               />
               <figcaption>Camiseta Roxa</figcaption>
             </figure>
@@ -69,7 +70,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#produtos">Produtos</a></li>
-          <li><a href="#perguntas-frequentes">Perguntas  Frequentes</a></li>
+          <li><a href="#perguntas-frequentes">Perguntas Frequentes</a></li>
           <li><a href="#fale-conosco">Fale Conosco</a></li>
         </ul>
       </nav>
@@ -131,7 +132,7 @@
           <tbody>
             <tr>
               <td>
-                <img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Roxa" /></td>
+                <img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" /></td>
                 <td>Camiseta Dev em Dobro</td>
               <td>R$ 89,90</td>
               <td>
@@ -142,7 +143,7 @@
             </tr>
             <tr>
               <td>
-                <img src="./assets/images/caneca_devemdobro.jpg" alt="Camiseta Roxa" /></td>
+                <img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro" /></td>
                 <td>Caneca Dev em Dobro</td>
               <td>R$ 89,90</td>
               <td>
